kubernetes/namespace-teamcity.yaml
# AUTHOR - MUHAMMAD IRFAN TAHIR

apiVersion: v1

kind: Namespace

metadata:
  name: teamcity
