kubernetes/teamcity-agent-pv.yaml
###Teamcity Agent 1
apiVersion: apps/v1

kind: Deployment

metadata:
  namespace: teamcity
  name: teamcity-agent1
  labels:
    app: teamcity-agent1

spec:
  replicas: 1
  selector:
    matchLabels:
      app: teamcity-agent1
  template:
    metadata:
      labels:
        app: teamcity-agent1
    spec:
      volumes:
       - name: agent1-config-path
         persistentVolumeClaim:
           claimName: agent1-volume
      containers:
        - name: teamcity-agent1
          image: jetbrains/teamcity-agent
          securityContext:
            runAsUser: 0
            privileged: true
          volumeMounts:
            - mountPath: /data/teamcity_agent/conf
              name: agent1-config-path
---
###Teamcity Agent 2
apiVersion: apps/v1

kind: Deployment

metadata:
  namespace: teamcity
  name: teamcity-agent2
  labels:
    app: teamcity-agent2

spec:
  replicas: 1
  selector:
    matchLabels:
      app: teamcity-agent2
  template:
    metadata:
      labels:
        app: teamcity-agent2
    spec:
      volumes:
       - name: agent2-config-path
         persistentVolumeClaim:
           claimName: agent2-volume
      containers:
        - name: teamcity-agent2
          image: jetbrains/teamcity-agent
          securityContext:
            runAsUser: 0
            privileged: true
          volumeMounts:
            - mountPath: /data/teamcity_agent/conf
              name: agent2-config-path
---
###Teamcity Agent 3
apiVersion: apps/v1

kind: Deployment

metadata:
  namespace: teamcity
  name: teamcity-agent3
  labels:
    app: teamcity-agent3

spec:
  replicas: 1
  selector:
    matchLabels:
      app: teamcity-agent3
  template:
    metadata:
      labels:
        app: teamcity-agent3
    spec:
      volumes:
       - name: agent3-config-path
         persistentVolumeClaim:
           claimName: agent3-volume
      containers:
        - name: teamcity-agent3
          image: jetbrains/teamcity-agent
          securityContext:
            runAsUser: 0
            privileged: true
          volumeMounts:
            - mountPath: /data/teamcity_agent/conf
              name: agent3-config-path
