kubernetes/hello-app-service.yaml
# AUTHOR - MUHAMMAD IRFAN TAHIR

apiVersion: v1

kind: Service

metadata:
  name: hello-world

spec:
  type: NodePort
  ports:
    - targetPort: 8080
      port: 8080
      nodePort: 30008
  selector:
    app: hello-app
